# AoC2021

./: CMakeLists.txt  vcpkg.json
AoC2021/1/: CMakeLists.txt
AoC2021/1/src/: main.cpp  sonar.cpp
AoC2021/day1/: CMakeLists.txt
AoC2021/day1/part1/src/: main.cpp  sonar.cpp
AoC2021/day1/part2/src/: main.cpp  sonar.cpp
AoC2021/day2/: CMakeLists.txt
AoC2021/day2/part1/src/: main.cpp  navi.cpp
AoC2021/day2/part2/src/: main.cpp  navi.cpp
AoC2021/include/AoC2021/1/: sonar.hpp
AoC2021/include/AoC2021/day1/part1/: sonar.hpp
AoC2021/include/AoC2021/day1/part2/: sonar.hpp
AoC2021/include/AoC2021/day2/part1/: instruction.hpp  navi.hpp
AoC2021/include/AoC2021/day2/part2/: instruction.hpp  navi.hpp
cmake/: CompilerWarnings.cmake
resources/: day1.res.hpp  day2.res.hpp
tests/: CMakeLists.txt
tests/include/: 1_recources.hpp
tests/src/: 1.cpp  day1.cpp  day2.cpp
